--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,14 @@
 <h1>
   {{title}}
 </h1>
+
+<nav>
+  <a [routerLink]="['/']">Home</a>
+  <a [routerLink]="['/login']">Login</a>
+  <a [routerLink]="['/register']">Register</a>
+  <a [routerLink]="['/reset']">Reset</a>
+</nav>
+
+
+
+<router-outlet></router-outlet>
