Bootstrap .alpha5 SCSS. Redesign app.

--- a/client/src/assets/Scss/helpers/_mixins.scss
+++ b/client/src/assets/Scss/helpers/_mixins.scss
@@ -1,10 +1,10 @@
-@mixin box-shadow($shadow...) {
+@mixin yoty-box-shadow($shadow...) {
   @if $yoty-enable-shadows {
     box-shadow: $shadow;
   }
 }
 
-@mixin transition($transition...) {
+@mixin yoty-transition($transition...) {
   @if $yoty-enable-transitions {
     transition: $transition;
   }
