--- a/client/src/assets/Scss/helpers/_variables.scss
+++ b/client/src/assets/Scss/helpers/_variables.scss
@@ -1,8 +1,9 @@
-$font-serif: TiemposText,Georgia,Serif;
-$font-sans: Circular,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+$yoty-font-serif: TiemposText,Georgia,Serif;
+$yoty-font-sans: Circular,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
 
-$body-bgcolor: #F9FAFC ;
-$body-fontFamily: $font-sans;
+$yoty-body-bgcolor: #f4f5f7 ;
+$yoty-body-fontFamily: $yoty-font-sans;
+$yoty-body-color: #535353 ;
 
 
 $yoty-container-bg: #ffffff;
