--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,52 +1,5 @@
-  <div class="pos-f-t">
-    <div id="header">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-1 navbar-light"><a href="#" class="navbar-brand">YOTY</a></div>
-          <div class="col-md-9">
-            <div id="search-box" class="input-group"><input type="text" placeholder="Bir şeyler ara..." class="form-control"><button type="button" class="btn btn-secondary"> <i aria-hidden="true" class="fa fa-search"></i></button></div>
-          </div>
-          <div class="col-md-2">
-            <a href="#" class="profile-link float-xs-right"><img src="https://pbs.twimg.com/profile_images/669434292649508864/WkwXpO_5.jpg" class="img-circle"></a>
-            <div id="main-menu"
-              class="btn-group float-xs-right">
-              <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="header-menu dropdown-toggle"><i aria-hidden="true" class="fa fa-ellipsis-h"></i></a>
-              <div class="dropdown-menu dropdown-menu-right"><a href="#" class="dropdown-item">Action</a><a href="#" class="dropdown-item">Another action</a><a href="#"
-                  class="dropdown-item">Something else here</a>
-                <div class="dropdown-divider"></div><a href="#" class="dropdown-item">Separated link</a></div>
-            </div><a href="#" class="header-menu float-xs-right"><i aria-hidden="true" class="fa fa-bell"></i></a></div>
-        </div>
-      </div>
-      <div id="navbar-head" class="collapse">
-        <div class="container bg-ingerse p-a-1">
-          <h3>Collapsed content</h3>
-          <p>Toggleable via the navbar brand.</p>
-        </div>
-      </div>
-      <div class="navbar navbar-light navbar-static-top">
-        <div class="container">
-          <button type="button" data-toggle="collapse" data-target="#navbar" class="navbar-toggler hidden-sm-up collapsed" aria-expanded="false">☰</button>
-          <div id="navbar" class="navbar-toggleable-xs collapse" aria-expanded="false" style="height: 0px;">
-            <ul class="nav navbar-nav">
-              <li class="nav-item active"><a [routerLink]="['/']" class="nav-link">Home</a></li>
-              <li class="nav-item"><a [routerLink]="['/login']" class="nav-link">Login</a></li>
-              <li class="nav-item"><a [routerLink]="['/register']" class="nav-link">Register</a></li>
-              <li class="nav-item"><a [routerLink]="['/reset']" class="nav-link">Reset</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-<div class="container yoty-container">
-
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+<div class="yoty-container">
   <router-outlet></router-outlet>
-  
 </div>
-
-<footer class="footer">
-  <div class="container">
-    <span class="text-muted">Yoty sticky footer</span>
-  </div>
-</footer>
