--- a/client/src/assets/Scss/themes/_theme.scss
+++ b/client/src/assets/Scss/themes/_theme.scss
@@ -1,16 +1,16 @@
 html {
-    text-rendering: optimizeLegibility;
+    
 }
 
 body {
-    background: $body-bgcolor;
-    font-family: $body-fontFamily;
+    background: $yoty-body-bgcolor;
+    font-family: $yoty-body-fontFamily;
     font-weight: 400;
-    padding-top: 50px;
     font-size: 14px;
-    // -webkit-font-smoothing: antialiased;
-    // -moz-osx-font-smoothing: grayscale;
-    margin-bottom: 60px;
+    color: $yoty-body-color;
+    
+    @include yoty-transition(color 0.5s ease);
+
     >.container {
         padding: 60px 15px 0;
     }
@@ -19,6 +19,7 @@ body {
 a {
     color: #999;
     text-decoration: none;
+    @include yoty-transition(color 0.5s ease);
 }
 
 a:hover {
@@ -28,82 +29,7 @@ a:hover {
 
 
 
-#header {
-    padding: 5px 0 0 0;
-    min-height: 90px;
-    background: $yoty-container-bg;
-    @include box-shadow(0 1px 0 0 rgba(0, 0, 0, .05), 0 2px 4px 0 rgba(0, 0, 0, .06));
-    
-    a.header-menu {
-            display: block;
-            background: transparent;
-            width: 30px;
-            text-align: center;
-            
-            /* line-height: 30px; */
-            padding: 6px 0 0 0;
-            
-            &:after {
-                content: none!important;
-            }
-        }
-    
-    #search-box {
-        margin: 4px 0;
-        position: relative;
-        height: 30px;
-        .form-control,
-        .btn {
-            height: 30px;
-            padding: 5px;
-            font-size: 13px;
-        }
-        .btn {
-            position: absolute;
-            right: 0;
-            border: 0;
-            background: transparent;
-            z-index: 3;
-            width: 28px;
-            height: 28px;
-            margin: 1px;
-            &:hover {
-                
-            }
-        }
-    }
-    #main-menu {
-        margin: 3px 0;
-        font-size: 14px;
-        
-    }
-    .profile-link {
-        margin: 4px;
-        img {
-            width: 30px;
-        }
-    }
 
 
-    .nav{
-        border-top:1px solid $body-bgcolor;
-    }
-    .navbar{padding: 0.5rem 1rem 0;}
-}
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
-    >.container {
-        padding-right: 15px;
-        padding-left: 15px;
-    }
-}
 
-.yoty-container {
-    padding-top: $yoty-page-content-start-top!important;
-}
