--- a/client/src/app/Components/_Layout/Sidebar/sidebar.component.html
+++ b/client/src/app/Components/_Layout/Sidebar/sidebar.component.html
@@ -1,8 +1,44 @@
 <aside id="sidebar">
   <ul class="nav nav-pills nav-stacked">
-    <li class="nav-item active"><a class="nav-link active" [routerLink]="['/']" class="nav-link">Home</a></li>
-    <li class="nav-item"><a class="nav-link" [routerLink]="['/login']" class="nav-link">Login</a></li>
-    <li class="nav-item"><a class="nav-link" [routerLink]="['/register']" class="nav-link">Register</a></li>
-    <li class="nav-item"><a class="nav-link" [routerLink]="['/reset']" class="nav-link">Reset</a></li>
+    <li class="nav-item nav-item-collapsible" >
+      <a class="nav-link collapse" href="#" (click)="toggleMenu($event)">
+        <i class="fa fa-home" aria-hidden="true"></i> Dashboard
+        <i class="fa fa-angle-down rotate-icon"></i>
+      </a>
+      <ul class="nav nav-pills nav-stacked" [class.menuIsOpen]="collapse">
+        <li><a class="nav-link" [routerLink]="['/']">Home</a></li>
+        <li><a class="nav-link" [routerLink]="['/login']" class="nav-link">Login</a></li>
+        <li><a class="nav-link" [routerLink]="['/register']" class="nav-link">Register</a></li>
+        <li><a class="nav-link" [routerLink]="['/reset']" class="nav-link">Reset</a></li>
+      </ul>
+    </li>
+    <li class="nav-item nav-item-collapsible">
+      <a class="nav-link collapse" href="#" (click)="toggleMenu($event)">
+        <i class="fa fa-cutlery"></i> Home
+        <i class="fa fa-angle-down rotate-icon"></i>
+      </a>
+      <ul class="nav nav-pills nav-stacked" [class.menuIsOpen]="collapse">
+        <li><a class="nav-link" [routerLink]="['/']">Home</a></li>
+        <li><a class="nav-link" [routerLink]="['/login']" class="nav-link">Login</a></li>
+        <li><a class="nav-link" [routerLink]="['/register']" class="nav-link">Register</a></li>
+        <li><a class="nav-link" [routerLink]="['/reset']" class="nav-link">Reset</a></li>
+      </ul>
+    </li>
+    <li class="nav-item nav-item-collapsible">
+      <a class="nav-link collapse" href="#" (click)="toggleMenu($event)">
+        <i class="fa fa-cutlery"></i> Home
+        <i class="fa fa-angle-down rotate-icon"></i>
+      </a>
+      <ul class="nav nav-pills nav-stacked" [class.menuIsOpen]="collapse">
+        <li><a class="nav-link" [routerLink]="['/']">Home</a></li>
+        <li><a class="nav-link" [routerLink]="['/login']" class="nav-link">Login</a></li>
+        <li><a class="nav-link" [routerLink]="['/register']" class="nav-link">Register</a></li>
+        <li><a class="nav-link" [routerLink]="['/reset']" class="nav-link">Reset</a></li>
+      </ul>
+    </li>
+
+    
   </ul>
+
+
 </aside>
