--- a/client/src/assets/Scss/layout/_sidebar.scss
+++ b/client/src/assets/Scss/layout/_sidebar.scss
@@ -9,4 +9,52 @@
   height: 100%;
   position: fixed;
   padding: 10px;
+
+  li.nav-item-collapsible{
+    > a { 
+      position: relative;
+      background-color: rgba(0, 0, 0, 0.2)
+    }
+    > ul {
+      margin-left: 25px;
+    }
+    .fa {
+        // font-size: 1.2rem;
+        margin-right: 10px;
+    }
+
+    .fa-angle-down.rotate-icon {
+        position: absolute;
+        right: 0;
+        top: 10px;
+    }
+
+
+    /* hide */
+    a.collapse + ul {
+        font-size: 0;
+        margin: 0;
+        opacity: 0;
+        padding: 0;
+        /* fade out, then shrink */
+        transition: opacity .10s,
+                    font-size .2s .10s,
+                    margin .2s .10s,
+                    padding .2s .10s;
+    }
+
+    /* reveal */
+    ul {
+        /* unshrink, then fade in */
+        transition: font-size .10s,
+                    margin .10s,
+                    padding .10s,
+                    opacity .2s .10s;
+    }
+
+  }
 }
+
+
+
+
